--- a/app/src/main/res/layout/fragment_detail_pokemon.xml
+++ b/app/src/main/res/layout/fragment_detail_pokemon.xml
@@ -39,7 +39,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@color/secondary_text"
+            android:background="@color/primary_gray"
             app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@color/secondary_text"
+            android:background="@color/primary_gray"
             app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
@@ -76,8 +76,8 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_20sdp"
             android:background="@drawable/background_primary_gradient_top"
-            app:layout_constraintEnd_toEndOf="parent"
             android:elevation="3dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category" />
 
@@ -115,11 +115,11 @@
                     android:id="@+id/viewpager_images"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_200sdp"
+                    android:layout_margin="0dp"
+                    android:clipToPadding="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:clipToPadding="true"
-                    android:layout_margin="0dp"
                     app:listImages="@{pokemon.images}"
                     tools:visibility="visible" />
 
@@ -132,8 +132,6 @@
                     app:layout_constraintBottom_toBottomOf="@+id/viewpager_images"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
-
-
 
 
                 <TextView
@@ -204,7 +202,7 @@
                     android:layout_height="2dp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_pokedex"
                     app:layout_constraintEnd_toStartOf="@+id/text_subtitle_pokedex"
                     app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +227,7 @@
                     android:layout_height="2dp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_pokedex"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/text_subtitle_pokedex"
@@ -239,10 +237,10 @@
                     android:id="@+id/viewpager_text_pokedex"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_150sdp"
+                    android:layout_margin="0dp"
+                    android:clipToPadding="false"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:clipToPadding="false"
-                    android:layout_margin="0dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_subtitle_pokedex"
                     app:listText="@{pokemon.getOrderDescriptionList}"
                     tools:visibility="visible" />
@@ -255,7 +253,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.height}"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/primary_yellow"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewpager_text_pokedex"
@@ -283,7 +281,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.weight}"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/primary_yellow"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
                     app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                     app:layout_constraintTop_toBottomOf="@+id/viewpager_text_pokedex"
@@ -311,7 +309,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.category}"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/primary_yellow"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
                     app:layout_constraintTop_toBottomOf="@+id/viewpager_text_pokedex"
@@ -354,7 +352,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.ability}"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/primary_yellow"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_weight"
@@ -382,7 +380,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_stats"
                     app:layout_constraintEnd_toStartOf="@+id/text_stats"
                     app:layout_constraintStart_toStartOf="parent"
@@ -410,7 +408,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_stats"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/text_stats"
@@ -453,8 +451,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
                     android:progress="@{pokemon.hp}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/primary_text"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_yellow"
                     app:layout_constraintBottom_toBottomOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -496,8 +494,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
                     android:progress="@{pokemon.attack}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/primary_text"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_yellow"
                     app:layout_constraintBottom_toBottomOf="@+id/textView7"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -540,8 +538,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
                     android:progress="@{pokemon.defence}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/primary_text"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_yellow"
                     app:layout_constraintBottom_toBottomOf="@+id/textView8"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -583,8 +581,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
                     android:progress="@{pokemon.attack_special}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/primary_text"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_yellow"
                     app:layout_constraintBottom_toBottomOf="@+id/textView9"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -626,8 +624,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
                     android:progress="@{pokemon.defence_special}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/primary_text"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_yellow"
                     app:layout_constraintBottom_toBottomOf="@+id/textView10"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -669,8 +667,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
                     android:progress="@{pokemon.speed}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/primary_text"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_yellow"
                     app:layout_constraintBottom_toBottomOf="@+id/textView11"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -712,8 +710,8 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="600"
                     android:progress="@{pokemon.total}"
-                    android:progressBackgroundTint="@color/secondary_text"
-                    android:progressTint="@color/red_primary"
+                    android:progressBackgroundTint="@color/primary_gray"
+                    android:progressTint="@color/primary_red"
                     app:layout_constraintBottom_toBottomOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -727,7 +725,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_evolutive"
                     app:layout_constraintEnd_toStartOf="@+id/text_evolutive"
                     app:layout_constraintStart_toStartOf="parent"
@@ -752,7 +750,7 @@
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_evolutive"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
@@ -791,7 +789,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.first_name_pokemon}"
-                    android:textColor="@color/secondary_text"
+                    android:textColor="@color/primary_gray"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -833,7 +831,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.second_name_pokemon}"
-                    android:textColor="@color/secondary_text"
+                    android:textColor="@color/primary_gray"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
                     app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -887,7 +885,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:text="@{pokemon.third_name_pokemon}"
-                    android:textColor="@color/secondary_text"
+                    android:textColor="@color/primary_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -914,7 +912,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_random_data"
                     app:layout_constraintEnd_toStartOf="@+id/text_random_data"
                     app:layout_constraintStart_toStartOf="parent"
@@ -941,7 +939,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:background="@color/secondary_text"
+                    android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_random_data"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/text_random_data"
