--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@color/secondary_text"
+            android:background="@color/primary_gray"
             app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@color/secondary_text"
+            android:background="@color/primary_gray"
             app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
