--- a/app/src/main/res/layout/fragment_region_pokemon.xml
+++ b/app/src/main/res/layout/fragment_region_pokemon.xml
@@ -12,6 +12,7 @@
         <variable
             name="nameRegion"
             type="String" />
+
         <variable
             name="subtitle"
             type="String" />
@@ -39,7 +40,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@color/secondary_text"
+            android:background="@color/primary_gray"
             app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +57,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
-            tools:text="151 pokemon encontrados \nen esta region"/>
+            tools:text="151 pokemon encontrados \nen esta region" />
 
 
         <View
@@ -64,7 +65,7 @@
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@color/secondary_text"
+            android:background="@color/primary_gray"
             app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
@@ -87,6 +88,7 @@
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:listPokemon="@{viewModel.itemList}"
                 app:spanCount="3"
+                tools:itemCount="4"
                 tools:listitem="@layout/item_list_pokemon" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
