--- a/app/src/main/res/layout/item_pokedex_text_pokemon.xml
+++ b/app/src/main/res/layout/item_pokedex_text_pokemon.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{text.title}"
                 android:textSize="@dimen/_16sdp"
+                android:padding="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Kanto" />
