--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,12 +9,11 @@
     <color name="white">#FFFFFFFF</color>
 
     <!--Custom colors-->
-    <color name="red_primary">#FFFB1B1B</color>
-    <color name="primary_text">#FFffcb05</color>
-    <color name="secondary_text">#FFCBD5ED</color>
-    <color name="text_hint">#881E2746</color>
+    <color name="primary_red">#FFFB1B1B</color>
+    <color name="primary_yellow">#FFffcb05</color>
+    <color name="primary_gray">#FFCBD5ED</color>
+    <color name="secondary_purple_700">#881E2746</color>
     <color name="transparent">@android:color/transparent</color>
-    <color name="gray_general">@android:color/darker_gray</color>
     <color name="black_transparent">#B5000000</color>
     <color name="purple_700_transparent">#B5141A31</color>
 
