--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
 
     <!-- Customize your theme here. -->
     <style name="TextViewTitleBold" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColor">@color/primary_yellow</item>
         <item name="android:fontFamily">@font/lato_black</item>
         <item name="android:textSize">@dimen/_30sdp</item>
         <item name="android:paddingStart">@dimen/_14sdp</item>
@@ -27,7 +27,7 @@
     </style>
 
     <style name="TextViewTitle" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_gray</item>
         <item name="android:fontFamily">@font/lato_bold</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:paddingEnd">@dimen/_14sdp</item>
@@ -35,7 +35,7 @@
     </style>
 
     <style name="TextViewDescription" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_gray</item>
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:paddingTop">@dimen/_14sdp</item>
@@ -45,7 +45,7 @@
     </style>
 
     <style name="TextViewTitleRegions" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_gray</item>
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:elevation">2dp</item>
@@ -56,7 +56,7 @@
 
 
     <style name="TextViewTitlePokemon" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_gray</item>
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:elevation">2dp</item>
@@ -68,7 +68,7 @@
 
 
     <style name="TextViewDescriptionPokemon" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColor">@color/primary_yellow</item>
         <item name="android:fontFamily">@font/lato_bold</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:elevation">2dp</item>
@@ -78,7 +78,7 @@
     </style>
 
     <style name="TextViewDescriptionBold" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_gray</item>
         <item name="android:fontFamily">@font/lato_black</item>
         <item name="android:textSize">@dimen/_14sdp</item>
         <item name="android:layout_marginTop">@dimen/_10sdp</item>
@@ -87,13 +87,9 @@
 
     <style name="SearchEdittext" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/purple_700</item>
-        <item name="android:textColorHint">@color/secondary_text</item>
+        <item name="android:textColorHint">@color/primary_gray</item>
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textSize">@dimen/_14sdp</item>
-    </style>
-
-    <style name="SearchTextLayout" parent="TextAppearance.AppCompat">
-
     </style>
 
     <style name="ButtonRippleNormal">
@@ -107,26 +103,5 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="CollapsingTextAppearance" parent="Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
-    <style name="CollapsingTextAppearance.Inverse" >
-        <item name="android:textSize">30sp</item>
-    </style>
 
-    <style name="ToolBarWithNavigationBack">
-        <item name="navigationIcon">@drawable/abc_ic_ab_back_material</item>
-    </style>
-
-    <style name="TextAppearance" parent="TextAppearance.AppCompat"/>
-    <style name="TextAppearance.Header">
-        <item name="android:textAllCaps">true</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textColor">?colorAccent</item>
-    </style>
-
-    <style name="TextComponent"/>
-
-    <style name="TextComponent.ItemRow">
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:minHeight">48dp</item>
-    </style>
 </resources>
