--- a/app/src/main/res/layout/fragment_detail_pokemon.xml
+++ b/app/src/main/res/layout/fragment_detail_pokemon.xml
@@ -160,12 +160,29 @@
                     android:elevation="2dp"
                     android:gravity="center"
                     android:lines="1"
-                    android:padding="@dimen/_20sdp"
+                    android:paddingTop="0dp"
                     android:text="@{pokemon.name}"
                     android:textSize="@dimen/_20sdp"
+                    app:layout_constraintEnd_toStartOf="@+id/imageType1"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewpager_images"
                     tools:text="Bulbasaur" />
+
+                <TextView
+                    android:id="@+id/text_pokemon_name_anime_description"
+                    style="@style/TextViewDescriptionBold"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:elevation="2dp"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:padding="0dp"
+                    android:layout_margin="0dp"
+                    android:text="@{pokemon.originalName}"
+                    app:layout_constraintEnd_toEndOf="@+id/text_pokemon_name_description"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description"
+                    tools:text="フシギバナ (Fushigibana)" />
 
 
                 <ImageView
@@ -176,22 +193,23 @@
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/text_pokemon_name_description"
-                    app:layout_constraintStart_toEndOf="@+id/text_pokemon_name_description"
+                    app:layout_constraintBottom_toBottomOf="@+id/text_pokemon_name_anime_description"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView9"
                     app:layout_constraintTop_toTopOf="@+id/text_pokemon_name_description"
                     app:src="@{pokemon.getType(pokemon.type_first)}"
                     tools:src="@drawable/ic_grass" />
 
                 <ImageView
+                    android:id="@+id/imageView9"
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_25sdp"
                     android:layout_margin="@dimen/_20sdp"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
                     android:textSize="14sp"
-                    android:visibility="@{pokemon.type_second !=null  ? View.VISIBLE : View.GONE, default= gone }"
-                    app:layout_constraintBottom_toBottomOf="@+id/text_pokemon_name_description"
-                    app:layout_constraintStart_toEndOf="@+id/imageType1"
+                    android:visibility="@{pokemon.type_second !=null  ? View.VISIBLE : View.INVISIBLE, default= invisible }"
+                    app:layout_constraintBottom_toBottomOf="@+id/text_pokemon_name_anime_description"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/text_pokemon_name_description"
                     app:src="@{pokemon.getType(pokemon.type_second)}"
                     tools:src="@drawable/ic_poison" />
@@ -206,7 +224,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_pokedex"
                     app:layout_constraintEnd_toStartOf="@+id/text_subtitle_pokedex"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description" />
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_anime_description" />
 
                 <TextView
                     android:id="@+id/text_subtitle_pokedex"
@@ -215,10 +233,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="@dimen/_14sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:text='@{@string/textview_subtitle_detail_pokedex(pokemon.name)}'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description"
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_anime_description"
                     tools:text="¿Qué dice la pokedex sobre\nBulbasaur?" />
 
 
@@ -231,7 +250,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_pokedex"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/text_subtitle_pokedex"
-                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description" />
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_anime_description" />
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewpager_text_pokedex"
@@ -449,7 +468,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="100"
+                    android:max="200"
                     android:progress="@{pokemon.hp}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_yellow"
@@ -492,7 +511,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="100"
+                    android:max="200"
                     android:progress="@{pokemon.attack}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_yellow"
@@ -536,7 +555,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="100"
+                    android:max="200"
                     android:progress="@{pokemon.defence}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_yellow"
@@ -579,7 +598,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="100"
+                    android:max="200"
                     android:progress="@{pokemon.attack_special}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_yellow"
@@ -622,7 +641,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="100"
+                    android:max="200"
                     android:progress="@{pokemon.defence_special}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_yellow"
@@ -665,7 +684,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="100"
+                    android:max="200"
                     android:progress="@{pokemon.speed}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_yellow"
@@ -708,7 +727,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:max="600"
+                    android:max="1200"
                     android:progress="@{pokemon.total}"
                     android:progressBackgroundTint="@color/primary_gray"
                     android:progressTint="@color/primary_red"
@@ -762,7 +781,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
                     android:gravity="center"
-                    android:text="@{pokemon.first_num_pokemon}"
+                    android:text="@{pokemon.getFormatNumber(pokemon.first_num_pokemon)}"
                     android:textSize="@dimen/_10sdp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
@@ -783,6 +802,7 @@
 
 
                 <TextView
+                    android:id="@+id/textView3"
                     style="@style/TextViewDescriptionPokemon"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -796,6 +816,9 @@
                     tools:text="Bulbasaur" />
 
 
+
+
+
                 <TextView
                     style="@style/TextViewDescriptionBold"
                     android:layout_width="wrap_content"
@@ -803,7 +826,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:gravity="center"
-                    android:text="@{pokemon.second_num_pokemon}"
+                    android:text="@{pokemon.getFormatNumber(pokemon.second_num_pokemon)}"
                     android:textSize="@dimen/_10sdp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
@@ -844,7 +867,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:maxLines="2"
-                    android:padding="0dp"
+                    android:paddingBottom="20dp"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingTop="0dp"
                     android:text="@{pokemon.level_first_evolution}"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
@@ -859,7 +885,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:gravity="center"
-                    android:text="@{pokemon.third_num_pokemon}"
+                    android:text="@{pokemon.getFormatNumber(pokemon.third_num_pokemon)}"
                     android:textSize="@dimen/_10sdp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -905,31 +931,116 @@
                     app:layout_constraintTop_toBottomOf="@+id/textview_thirth"
                     tools:text="nivel 32" />
 
+                <ImageView
+
+                    android:id="@+id/imageView7"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_80sdp"
+                    android:contentDescription="@string/app_name"
+                    android:imageUrl="@{pokemon.getThumbnail(pokemon.third_num_pokemon)}"
+                    android:scaleType="fitCenter"
+                    android:visibility="@{pokemon.isMega() ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14"
+                    tools:src="@drawable/region_kanto" />
+
+
+                <TextView
+                    android:id="@+id/textView19"
+                    style="@style/TextViewDescriptionPokemon"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:visibility="@{pokemon.isMega() ? View.VISIBLE : View.GONE}"
+                    android:text="@{pokemon.third_name_pokemon}"
+                    android:textColor="@color/primary_gray"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView7"
+                    tools:text="Bulbasaur" />
+
+                <TextView
+                    android:id="@+id/textView20"
+                    style="@style/TextViewDescriptionPokemon"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="2"
+                    android:visibility="@{pokemon.isMega() ? View.VISIBLE : View.GONE}"
+                    android:text="@{pokemon.elementMega}"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/text_random_data"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14"
+                    tools:text="venusaurita" />
+
+
+                <ImageView
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_80sdp"
+                    android:contentDescription="@string/app_name"
+                    android:imageUrl="@{pokemon.getThumbnailMega(pokemon.mega_num_pokemon)}"
+                    android:scaleType="fitCenter"
+                    android:visibility="@{pokemon.isMega() ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14"
+                    tools:src="@drawable/region_kanto" />
+
+
+                <TextView
+                    style="@style/TextViewDescriptionPokemon"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="2"
+                    android:visibility="@{pokemon.isMega() ? View.VISIBLE : View.GONE}"
+                    android:text="@{pokemon.mega_name_pokemon}"
+                    android:textColor="@color/primary_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView7"
+                    tools:text="Bulbasaur" />
+
+                <ImageView
+                    style="@style/TextViewDescriptionPokemon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:visibility="@{pokemon.isMega() ? View.VISIBLE : View.GONE}"
+                    android:src="@drawable/ic_arrow_right"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
+                    app:layout_constraintTop_toBottomOf="@+id/textView20"
+                    app:tint="@color/primary_gray"
+                    android:contentDescription="@string/app_name" />
 
                 <View
+                    android:id="@+id/view6"
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_marginStart="@dimen/_5sdp"
-                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_random_data"
                     app:layout_constraintEnd_toStartOf="@+id/text_random_data"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                    app:layout_constraintTop_toTopOf="@+id/text_random_data" />
 
                 <TextView
                     android:id="@+id/text_random_data"
                     style="@style/TextViewTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
                     android:gravity="center"
                     android:padding="@dimen/_14sdp"
                     android:text='@string/pokemon_subtitle_interesting_data'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView14"
+                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                     tools:text="Datos interesante" />
 
 
@@ -937,13 +1048,12 @@
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_marginStart="@dimen/_5sdp"
-                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
                     app:layout_constraintBottom_toBottomOf="@+id/text_random_data"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/text_random_data"
-                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                    app:layout_constraintTop_toTopOf="@+id/text_random_data" />
 
 
                 <TextView
