--- a/app/src/main/res/layout/fragment_region_pokemon.xml
+++ b/app/src/main/res/layout/fragment_region_pokemon.xml
@@ -16,6 +16,11 @@
         <variable
             name="subtitle"
             type="String" />
+
+        <variable
+            name="showFabWebView"
+            type="Boolean" />
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -92,6 +97,21 @@
                 tools:listitem="@layout/item_list_pokemon" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_open_web"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/_20sdp"
+            android:contentDescription="@string/app_name"
+            android:elevation="8dp"
+            android:src="@drawable/ic_open_browser"
+            android:visibility="@{showFabWebView ? View.VISIBLE :  View.GONE, default = visible }"
+            app:backgroundTint="@color/primary_red"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/white" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
