--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -104,4 +104,14 @@
     </style>
 
 
+    <style name="TextViewMsgBold" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/primary_gray</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="android:paddingStart">@dimen/_14sdp</item>
+        <item name="android:paddingEnd">@dimen/_14sdp</item>
+        <item name="android:paddingBottom">@dimen/_14sdp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
